<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="Replay Results" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="replayresults"
            android:persistent="true"
            android:summaryOff="Running the experiment"
            android:summaryOn="Replaying participant videos"
            android:title="Replay Results Mode" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Experiment settings" >
        <!--
    public static final String PREFERENCE_NAME = "BilingualAphasiaPrefs";
    public static final String PREFERENCE_PARTICIPANT_ID = "participantId";
    public static final String PREFERENCE_PARTICIPANT_FIRSTNAME = "participantfirstname";
    public static final String PREFERENCE_PARTICIPANT_LASTNAME = "participantlastname";
    public static final String PREFERENCE_PARTICIPANT_STARTTIME = "participantstarttime";
    public static final String PREFERENCE_PARTICIPANT_ENDTIME = "participantendtime";
    public static final String PREFERENCE_EXPERIEMENTER_CODE= "experimenterCode";
    public static final String PREFERENCE_EXPERIMENT_IS_READY= "experimentIsReady";
        -->
        <EditTextPreference
            android:defaultValue="Albert"
            android:dialogTitle="Enter the participant&apos;s first name"
            android:key="participantfirstname"
            android:persistent="true"
            android:summary=""
            android:title="Participant First Name" />
        <EditTextPreference
            android:defaultValue="Adams"
            android:dialogTitle="Enter the participant&apos;s last name"
            android:key="participantlastname"
            android:persistent="true"
            android:summary=""
            android:title="Participant Last Name" />
        <EditTextPreference
            android:defaultValue="AA"
            android:dialogTitle="Enter your experimenter code"
            android:key="experimenterCode"
            android:persistent="true"
            android:summary="Experimenter who tested participant"
            android:title="Experimenter code" />
        <EditTextPreference
            android:defaultValue="1"
            android:dialogTitle="Please edit this before the day of testing"
            android:key="testingdaynumber"
            android:persistent="true"
            android:summary="The number of the day, eg first = 1, second = 2"
            android:title="Testing Day Number" />
        <EditTextPreference
            android:defaultValue="1"
            android:dialogTitle="Please edit this before the day of testing, after that this field is autogenerated"
            android:key="participantnumberinday"
            android:persistent="true"
            android:summary="The participant number of this day, first participant = 1, second day first participant = 1 also"
            android:title="Participant Number in the Testing Day" />
        <EditTextPreference
            android:defaultValue="UP00AA00NN"
            android:dialogTitle="The participant code is auto-generated, you dont need to edit this."
            android:key="participantId"
            android:persistent="true"
            android:summary="Autogenerated Participant ID ParticiantGroup TestingDay ExperimenterInitials ParticipantNumber ParticipantInitials eg EP01GC01AA"
            android:title="Participant ID" />
        <!--
            <EditTextPreference 
				android:title="Participant start time"
				android:key="participantstarttime"  
				android:summary="" android:dialogTitle=""
				android:defaultValue="000"
				android:persistent="true"/>
				
            <EditTextPreference 
				android:title="Participant end time"
				android:key="participantendtime"  
				android:summary="" android:dialogTitle=""
				android:defaultValue="000"
				android:persistent="true"/>
				
			<EditTextPreference 
				android:title="Participant Group "
				android:key="participantgroup"  
				android:summary="First test: EnglishPaper, EnglishTablet, FrenchPaper, FenchTablet" android:dialogTitle="Please check to see if this participant got the paper or the tablet bat first."
				android:defaultValue="1"
				android:persistent="true"
				android:selectable="false" />
			<CheckBoxPreference
       			android:key="participantworstlanguage"
                android:title="Which Language is First? (Their worst language should be first.)"
                android:summaryOn="English is first"
                android:summaryOff="French is first"
                android:defaultValue="false"
                android:persistent="true"
                android:selectable="false" 
                />
             <CheckBoxPreference
       			android:key="tabletfirst"
                android:title="Tablet First?"
                android:summaryOn="Tablet BAT is first"
                android:summaryOff="Paper BAT is first"
                android:defaultValue="true"
                android:persistent="true"
                android:selectable="false" 
                />
        -->
    </PreferenceCategory>
    <PreferenceCategory android:title="About" >
        <PreferenceScreen android:title="Visit Website" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/iLanguage/AndroidOPrime/wiki" />
            <Preference
                android:enabled="false"
                android:selectable="false"
                android:summary="@string/preference_about_summary"
                android:title="@string/preference_about_title" />
            <Preference
                android:enabled="false"
                android:selectable="false"
                android:summary="@string/preference_thanks_summary"
                android:title="@string/preference_thanks_title" />
            <Preference
                android:enabled="false"
                android:selectable="false"
                android:summary="@string/preference_licence_summary"
                android:title="@string/preference_licence_title" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>